refactor(text-inputs): adicionando limites mínimos e máximos para campos de entrada do frontend

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -28,7 +28,8 @@
   }
 
   &.has-error select,
-  &.has-error input {
+  &.has-error input,
+  &.has-error textarea {
     border-color: red;
   }
 
