--- a/src/pages/contract/components/styles.scss
+++ b/src/pages/contract/components/styles.scss
@@ -66,6 +66,13 @@
     .bi-cell {
       color: vars.$btn-icon-edit;
     }
+
+    .truncate-text {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 400px;
+    }
   }
 
   .buttons {
