--- a/src/pages/employee/components/style.scss
+++ b/src/pages/employee/components/style.scss
@@ -68,6 +68,13 @@
     }
   }
 
+  .truncate-text {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 400px;
+    }
+
   .buttons {
     display: flex;
     align-items: center;
