--- a/src/pages/client/components/sections/Sale/Sale.scss
+++ b/src/pages/client/components/sections/Sale/Sale.scss
@@ -74,7 +74,7 @@ $color-white: #ffffff;
       &.active {
         background-color: $color-blue-800;
         color: $color-white;
-        box-shadow: inset 0 4px 6px -1px rgba(0, 0, 0, 0.2); // Sombra interna customizada
+        box-shadow: inset 0 4px 6px -1px rgba(0, 0, 0, 0.2);
       }
     }
   }
@@ -132,7 +132,6 @@ $color-white: #ffffff;
 
         &.selected {
           background-color: $color-blue-100;
-          border-color: $color-blue-400;
           font-weight: 600;
           color: $color-blue-800;
           @include shadow-md;
