style(InfoClient): melhorando cores do menu de cliente

--- a/src/pages/client/Info/infoClient.scss
+++ b/src/pages/client/Info/infoClient.scss
@@ -60,3 +60,13 @@
     }
   }
 }
+
+.menu-btn {
+  &.active {
+    background-color: vars.$client-menu-active;
+  }
+
+  &:hover {
+    background-color: vars.$client-menu-hover;
+  }
+}
