--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -22,3 +22,5 @@ $submenu-hover:  #ffeb3b;
 $menu-label: #fff;
 $submenu-background: #f9f9f9;
 $user-fill-color: #757575;
+$client-menu-active: #1e40af;
+$client-menu-hover: #17328a;
