style(Sale): simplificando exibição

--- a/src/pages/client/components/sections/Sale/Sale.scss
+++ b/src/pages/client/components/sections/Sale/Sale.scss
@@ -137,7 +137,7 @@ $color-white: #ffffff;
         }
       }
       
-      .loading-message, .empty-message {
+      .empty-message {
           padding: 1rem;
           text-align: center;
           color: $color-gray-500;
