--- a/src/pages/client/components/sections/Sale/Sale.scss
+++ b/src/pages/client/components/sections/Sale/Sale.scss
@@ -21,13 +21,15 @@ $color-gray-800: #1f2937;
 $color-white: #ffffff;
 
 @mixin shadow-xl {
-  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 8px 10px -6px rgba(0, 0, 0, 0.1);
 }
 @mixin shadow-2xl {
   box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
 }
 @mixin shadow-md {
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -2px rgba(0, 0, 0, 0.1);
 }
 @mixin shadow-inner {
   box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
@@ -84,21 +86,60 @@ $color-white: #ffffff;
     flex-direction: column;
     gap: 1rem;
 
-    .search-input {
-      width: 100%;
-      padding: 0.75rem 1rem;
-      border: 1px solid $color-gray-300;
-      border-radius: 0.5rem;
-      @include shadow-md;
-      color: $color-gray-700;
+    .actions-bar {
+      display: flex;
+      gap: 0.5rem;
 
-      &::placeholder {
-        color: $color-gray-500;
+      .search-input {
+        width: 100%;
+        padding: 0.75rem 1rem;
+        border: 1px solid $color-gray-300;
+        border-radius: 0.5rem;
+        @include shadow-md;
+        color: $color-gray-700;
+
+        &::placeholder {
+          color: $color-gray-500;
+        }
+
+        &:focus {
+          border-color: $color-blue-400;
+          outline: none;
+        }
+
+        &:disabled {
+          background-color: $color-gray-50;
+          cursor: not-allowed;
+        }
       }
 
-      &:focus {
-        border-color: $color-blue-400;
-        outline: none;
+      .search-button {
+        padding: 0rem 0.8rem;
+        border: 1px solid $color-gray-300;
+        background-color: $color-gray-100;
+        border-radius: 0.5rem;
+        color: $color-gray-500;
+        @include shadow-md;
+        cursor: pointer;
+        transition: background-color 0.2s, border-color 0.2s, color 0.2s;
+
+        &:hover:not(:disabled) {
+          background-color: $color-gray-200;
+          color: $color-gray-700;
+        }
+
+        &:disabled {
+          background-color: $color-gray-100;
+          border-color: $color-gray-300;
+          color: $color-gray-400;
+          cursor: not-allowed;
+        }
+
+        i {
+          font-size: 1.25rem;
+          line-height: 1;
+          font-weight: bold;
+        }
       }
     }
 
@@ -136,11 +177,11 @@ $color-white: #ffffff;
           @include shadow-md;
         }
       }
-      
+
       .empty-message {
-          padding: 1rem;
-          text-align: center;
-          color: $color-gray-500;
+        padding: 1rem;
+        text-align: center;
+        color: $color-gray-500;
       }
     }
 
