style(Sale.scss): tornando as variáveis de cor css como globais

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -24,3 +24,21 @@ $submenu-background: #f9f9f9;
 $user-fill-color: #757575;
 $client-menu-active: #1e40af;
 $client-menu-hover: #17328a;
+
+$color-blue-900: #1e3a8a;
+$color-blue-800: #1e40af;
+$color-blue-700: #1d4ed8;
+$color-blue-400: #60a5fa;
+$color-blue-200: #bfdbfe;
+$color-green-600: #059669;
+$color-green-700: #047857;
+$color-green-800: #065f46;
+$color-gray-50: #f9fafb;
+$color-gray-100: #f3f4f6;
+$color-gray-200: #e5e7eb;
+$color-gray-300: #d1d5db;
+$color-gray-400: #9ca3af;
+$color-gray-500: #6b7280;
+$color-gray-700: #374151;
+$color-gray-800: #1f2937;
+$color-white: #ffffff;
