--- a/src/pages/client/components/sections/Sale/Sale.scss
+++ b/src/pages/client/components/sections/Sale/Sale.scss
@@ -36,7 +36,7 @@
     .tab-button {
       flex-grow: 1;
       text-align: center;
-      padding: 0.75rem 1.5rem;
+      padding: 0.5rem 1.5rem;
       font-size: 1.125rem;
       font-weight: 600;
       border-top-left-radius: 0.5rem;
@@ -72,11 +72,12 @@
 
       .search-input {
         width: 100%;
-        padding: 0.75rem 1rem;
+        padding: 0.5rem 1rem;
         border: 1px solid vars.$color-gray-300;
         border-radius: 0.5rem;
         @include shadow-md;
         color: vars.$color-gray-700;
+        font-size: 14px;
 
         &::placeholder {
           color: vars.$color-gray-500;
@@ -129,18 +130,19 @@
       border-radius: 0.5rem;
       @include shadow-inner;
       background-color: vars.$color-gray-50;
-      max-height: 20rem;
+      max-height: 16rem;
 
       .entity-item {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 1rem;
+        padding: 0.5rem 1rem;
         border-bottom: 1px solid vars.$color-gray-200;
         cursor: pointer;
         transition: all 200ms;
         background-color: vars.$color-white;
         color: vars.$color-gray-800;
+        font-size: 16px;
 
         &:last-child {
           border-bottom: none;
@@ -167,8 +169,8 @@
 
     .sell-button {
       width: 100%;
-      padding: 0.75rem 1rem;
-      font-size: 1.125rem;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
       font-weight: 800;
       border-radius: 0.5rem;
       @include shadow-xl;
