--- a/src/pages/client/components/sections/Sale/Sale.scss
+++ b/src/pages/client/components/sections/Sale/Sale.scss
@@ -126,11 +126,26 @@
 
     .entity-list-container {
       overflow-y: auto;
-      border: 1px solid vars.$color-gray-200;
+      border: 1px solid vars.$color-gray-400;
       border-radius: 0.5rem;
       @include shadow-inner;
       background-color: vars.$color-gray-50;
       max-height: 16rem;
+
+      .entity-list-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0.5rem 1rem;
+        background-color: vars.$color-gray-200;
+        color: vars.$color-gray-700;
+        font-weight: 600;
+        border-bottom: 1px solid vars.$color-gray-400;
+        font-size: 14px;
+        position: sticky;
+        top: 0;
+        z-index: 10;
+    }
 
       .entity-item {
         display: flex;
