--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -30,6 +30,7 @@ $color-blue-800: #1e40af;
 $color-blue-700: #1d4ed8;
 $color-blue-400: #60a5fa;
 $color-blue-200: #bfdbfe;
+$color-green-100: #D1FAE5;
 $color-green-600: #059669;
 $color-green-700: #047857;
 $color-green-800: #065f46;
