style(Sale): melhorando cores dos elementos da listagem de produtos

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -30,7 +30,10 @@ $color-blue-800: #1e40af;
 $color-blue-700: #1d4ed8;
 $color-blue-400: #60a5fa;
 $color-blue-200: #bfdbfe;
+$color-blue-100: #E0F2FE;
 $color-green-100: #D1FAE5;
+$color-green-400: #34D399;
+$color-green-500: #10B981;
 $color-green-600: #059669;
 $color-green-700: #047857;
 $color-green-800: #065f46;
