--- a/src/pages/client/components/sections/Sale/Sale.scss
+++ b/src/pages/client/components/sections/Sale/Sale.scss
@@ -145,7 +145,7 @@
         position: sticky;
         top: 0;
         z-index: 10;
-    }
+      }
 
       .entity-item {
         display: flex;
@@ -164,7 +164,7 @@
         }
 
         &:hover {
-          background-color: vars.$color-gray-200;
+          background-color: vars.$color-blue-100;
         }
 
         &.selected {
@@ -191,15 +191,16 @@
       @include shadow-xl;
       transition: all 300ms;
       cursor: pointer;
+      border: 1px solid vars.$color-gray-700;
 
       background-color: vars.$color-green-600;
       color: vars.$color-white;
 
       &:hover:not(:disabled) {
-        background-color: vars.$color-green-700;
+        background-color: vars.$color-green-500;
       }
       &:active:not(:disabled) {
-        background-color: vars.$color-green-800;
+        background-color: vars.$color-green-700;
       }
 
       &:disabled {
